--- a/GUI/SearchTaskWindow.xaml
+++ b/GUI/SearchTaskWindow.xaml
@@ -111,6 +111,20 @@
                             </Style>
                         </Expander.Style>
                         <StackPanel>
+                            <GroupBox Header="Search Filters">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width=".1*" />
+                                        <ColumnDefinition Width="1*" />
+                                    </Grid.ColumnDefinitions>
+                                    <StackPanel Grid.Column="0">
+                                        <CheckBox x:Name="QValue" Content="QValue"  IsEnabled="{Binding IsChecked, ElementName=classicSearchRadioButton}" />
+                                    </StackPanel>
+                                    <StackPanel Grid.Column="1">
+                                        <TextBox Text=".01" HorizontalAlignment="Left" x:Name="QValueInput"  IsEnabled="{Binding IsChecked, ElementName=QValue}" Margin="10,0,0,1" Width="35" RenderTransformOrigin="0.195,0.556" />
+                                    </StackPanel>
+                                </Grid>
+                            </GroupBox>
                             <GroupBox Header="Search Mode">
                                 <Grid>
                                     <Grid.ColumnDefinitions>
